DB Swagger Erweiterung und erstem Python call
